--- a/package.json
+++ b/package.json
@@ -1,59 +1,38 @@
 {
   "name": "innogy-smarthome-frontend",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.2.0",
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.10",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.9",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "i18next": "^22.0.8",
     "axios": "^1.2.0",
+    "redux": "^4.2.0",
+    "react-router-dom": "^6.4.4",
+    "react-uuid": "^2.0.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.0.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
-    "react-uuid": "^2.0.0",
-    "redux": "^4.2.0",
-    "sass": "^1.56.1",
-    "typescript": "^4.9.3",
-    "web-vitals": "^3.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-i18next": "^12.0.0"
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "sass": "^1.56.1"
   }
 }
