--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 diesel_migrations = "2.0.0"
 reqwest = {version="0.11.14", features = ["blocking", "json", "async-compression", "rustls"]}
-serde = "1.0.152"
+serde = {version="1.0.152"}
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
 actix-files = "0.6.2"
