--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.236.0",
@@ -20,7 +24,9 @@
     "react-router-dom": "^6.11.2",
     "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
