--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 diesel_migrations = "2.0.0"
 reqwest = {version="0.11.14", features = ["blocking", "json", "async-compression", "rustls"]}
 serde = {version="1.0.152"}
+redis = "0.23.0"
+tokio = "1.28.2"
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
 actix-files = "0.6.2"
