- Added basic login

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,3 +23,4 @@ libsqlite3-sys = {version = "0.25.2", features = ["bundled"]}
 futures-util = "0.3.28"
 clokwerk = "0.4.0"
 base64 = "0.21.2"
+jsonwebtoken = "8.3.0"
