--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -24,3 +24,6 @@ futures-util = "0.3.28"
 clokwerk = "0.4.0"
 base64 = "0.21.2"
 jsonwebtoken = "8.3.0"
+
+[target.'cfg(not(windows))'.dependencies]
+openssl = {version="0.10.52", features = ["vendored"]}
