--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,16 +8,16 @@ COPY --from=cache /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 WORKDIR /app/
 
 FROM base as amd64
-COPY ./target/x86_64-unknown-linux-musl/release/podfetch /app/podfetch
+COPY ./target/x86_64-unknown-linux-musl/release/api /app/gateway
 
 FROM base as armv7
-COPY ./target/armv7-unknown-linux-musleabihf/release/podfetch /app/podfetch
+COPY ./target/armv7-unknown-linux-musleabihf/release/api /app/gateway
 
 FROM base as arm64
-COPY ./target/aarch64-unknown-linux-musl/release/podfetch /app/podfetch
+COPY ./target/aarch64-unknown-linux-musl/release/api /app/gateway
 
 FROM ${TARGETARCH}${TARGETVARIANT} as final
 
 
 EXPOSE 8000
-CMD ["./podfetch"]
+CMD ["./gateway"]
