Added ui endpoint.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
-version: '3'
-services:
-  gateway:
-    image: samuel19982/gateway:latest
-    ports:
-      - "80:8000"
-    depends_on:
-      - cache
-  cache:
-    image: redis:7.0.11
-    restart: always
-    ports:
-      - '6379:6379'
-    command: redis-server --save 20 1 --loglevel warning
-    volumes:
-      - cache:/data
+  version: '3'
+  services:
+    gateway:
+      image: samuel19982/gateway:latest
+      ports:
+        - "80:8000"
+      environment:
+        - REDIS_URL=redis://cache:6379
+        - BASE_URL=<your-livsi-url>
+        - PASSWORD=<your-livisi-password>
+        - USERNAME=<your-livisi-username>
+        # BASIC_AUTH=true
+        # BASIC_USERNAME=<your-basic-auth-username>
+        # BASIC_PASSWORD=<your-basic-auth-password>
+      depends_on:
+        - cache
+    cache:
+      image: redis:7.0.11
+      restart: always
+      command: redis-server --save 20 1 --loglevel warning
+      volumes:
+        - cache:/data
