--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -18,6 +18,7 @@ actix = "0.13.0"
 actix-web-actors = "4.2.0"
 actix-cors="0.6.4"
 futures-util = "0.3.28"
+regex = "1.8.3"
 clokwerk = "0.4.0"
 base64 = "0.21.2"
 jsonwebtoken = "8.3.0"
