--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,12 +13,14 @@ tokio = "1.28.2"
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
 actix-files = "0.6.2"
-actix-web = "4.3.0"
+actix-4-jwt-auth = "1.0.0"
+actix-web = {version="4.3.0", features=["rustls"]}
 actix = "0.13.0"
 actix-web-actors = "4.2.0"
 actix-cors="0.6.4"
 futures-util = "0.3.28"
 regex = "1.8.3"
+futures = "0.3.28"
 clokwerk = "0.4.0"
 base64 = "0.21.2"
 jsonwebtoken = "8.3.0"
