--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+urlencoding = "2.1.3"
 reqwest = {version="0.11.14", features = ["blocking", "json", "async-compression", "rustls"]}
 serde = {version="1.0.152"}
 redis = "0.23.0"
