--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-  version: '3'
-  services:
+version: '3'
+services:
     gateway:
       image: samuel19982/gateway:latest
       ports:
@@ -18,7 +18,11 @@
         - cache
     cache:
       image: redis:7.0.11
+      ports:
+        - "6379:6379"
       restart: always
       command: redis-server --save 20 1 --loglevel warning
       volumes:
         - cache:/data
+volumes:
+  cache:
