--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
       ports:
         - "80:8000"
       environment:
-        - REDIS_URL=redis://cache:6379
-        - BASE_URL=<your-livsi-url>
-        - PASSWORD=<your-livisi-password>
-        - USERNAME=<your-livisi-username>
+        - REDIS_URL=redis://192.168.2.50:6379
+        - BASE_URL=http://192.168.1.120:8080
+        - BASIC_AUTH=true
+        - PASSWORD=AVAQKHqq#e4vssCFLW6FSTG*cm57%!
+        - USERNAME=admin
+        - BASIC_USERNAME=test
+        - BASIC_PASSWORD=test
         # BASIC_AUTH=true
         # BASIC_USERNAME=<your-basic-auth-username>
         # BASIC_PASSWORD=<your-basic-auth-password>
