--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 
 [dependencies]
 urlencoding = "2.1.3"
-reqwest = {version="0.11.14", features = ["blocking", "json", "async-compression", "rustls"]}
+reqwest = {version= "0.12.5", features = ["blocking", "json"]}
 serde = {version="1.0.152"}
-redis = "0.23.0"
 tokio = "1.28.2"
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
@@ -20,13 +19,13 @@ uuid = {version="1.4.0", features = ["v4", "serde"]}
 actix-web = {version="4.3.0", features=["rustls"]}
 actix = "0.13.0"
 actix-web-actors = "4.2.0"
-actix-cors="0.6.4"
+actix-cors="0.7.0"
 futures-util = "0.3.28"
 regex = "1.8.3"
 futures = "0.3.28"
 clokwerk = "0.4.0"
-base64 = "0.21.2"
-jsonwebtoken = "8.3.0"
+base64 = "0.22.1"
+jsonwebtoken = "9.3.0"
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = {version="0.10.60", features = ["vendored"]}
