--- a/ui/package.json
+++ b/ui/package.json
@@ -9,30 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "@reduxjs/toolkit": "^1.9.2",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "i18next": "^22.4.10",
-    "axios": "^1.6.0",
-    "redux": "^4.2.1",
-    "react-router-dom": "^6.8.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.7.2",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^12.3.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.25.1",
     "react-uuid": "^2.0.0",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.1.1",
-    "react-i18next": "^12.1.5"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18.19.42",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.4.7",
     "typescript": "^4.9.5",
-    "vite": "^4.5.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.2.7",
-    "sass": "^1.58.2"
+    "vite": "^4.5.3"
   }
 }
