--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,11 +9,13 @@ edition = "2021"
 urlencoding = "2.1.3"
 reqwest = {version= "0.12.5", features = ["blocking", "json"]}
 serde = {version="1.0.204"}
+chrono = "0.4.38"
 tokio = "1.28.2"
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
 actix-files = "0.6.2"
 actix-4-jwt-auth = "1.0.0"
+log = "0.4.22"
 tungstenite = {version = "0.20.1", features = ["native-tls"]}
 uuid = {version="1.4.0", features = ["v4", "serde"]}
 actix-web = {version="4.3.0", features=["rustls"]}
@@ -26,6 +28,7 @@ futures = "0.3.28"
 clokwerk = "0.4.0"
 base64 = "0.22.1"
 jsonwebtoken = "9.3.0"
+env_logger = "0.11.5"
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = {version="0.10.60", features = ["vendored"]}
