--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -20,14 +21,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "apexcharts": "^3.51.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^11.3.19",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "lucide-react": "^0.236.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^12.3.1",
