--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
     gateway:
       image: samuel19982/gateway:latest
+      volumes:
+        - "./db:/app/db"
       ports:
         - "80:8000"
       environment:
@@ -16,16 +18,3 @@ services:
         # BASIC_USERNAME=<your-basic-auth-username>
         # BASIC_PASSWORD=<your-basic-auth-password>
         # OIDC_CLIENT_ID=<your-oidc-client-id>
-
-      depends_on:
-        - cache
-    cache:
-      image: redis:7.0.11
-      ports:
-        - "6379:6379"
-      restart: always
-      command: redis-server --save 20 1 --loglevel warning
-      volumes:
-        - cache:/data
-volumes:
-  cache:
