--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,7 +10,7 @@ urlencoding = "2.1.3"
 reqwest = {version= "0.12.5", features = ["blocking", "json"]}
 serde = {version="1.0.204"}
 chrono = "0.4.38"
-tokio = "1.28.2"
+tokio = { version="1.28.2", features = ["full"] }
 serde_derive = "1.0.152"
 serde_json = "1.0.93"
 actix-files = "0.6.2"
