--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -24,7 +24,7 @@ jobs:
           npm install -g pnpm@latest
           pnpm run build:copy
       - name:
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
       - name: Setup Rust
         uses: actions/setup-rust@v1
         with:
