--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -49,6 +49,6 @@ jobs:
           done
       - name: Upload
         uses: actions/upload-artifact@v2
-        working-directory: api
         with:
               name: app-$GITHUB_SHA-${{ matrix.target }}
+              path: api/dist
