--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -25,10 +25,9 @@ jobs:
           pnpm run build:copy
       - name:
         uses: actions/checkout@master
-      - name: Setup Rust
-        uses: actions/setup-rust@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: stable
+          components: rustfmt
       - name: Build app
         run: cargo build --release --target ${{ matrix.target }}
       - name: Archive
