--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -18,13 +18,13 @@ jobs:
           - target: x86_64-apple-darwin
             archive: zip
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
       - name: "Create frontend"
         run: |
           cd ui-new
           npm install -g pnpm@latest
           pnpm run build:copy
-      - name:
-        uses: actions/checkout@master
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt
