--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt
+      - name: Add target
+        run: rustup target add ${{ matrix.target }}
       - name: Build app
         working-directory: api
         run: cargo build --release --target ${{ matrix.target }}
