--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -34,6 +34,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          SRC_DIR: api
           RUSTTARGET: ${{ matrix.target }}
           UPLOAD_MODE: none
       - name: Archive
