--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -18,8 +18,6 @@ jobs:
             archive: zip
           - target: x86_64-unknown-linux-musl
             archive: tar.gz tar.xz tar.zst
-          - target: x86_64-apple-darwin
-            archive: zip
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -48,10 +46,10 @@ jobs:
           cd ..
           for ext in ${{ matrix.archive }}; do
             case $ext in
-              zip) zip -r app-$GITHUB_SHA-${{ matrix.target }}.zip dist ;;
-              tar.gz) tar -czf app-$GITHUB_SHA-${{ matrix.target }}.tar.gz dist ;;
-              tar.xz) tar -cJf app-$GITHUB_SHA-${{ matrix.target }}.tar.xz dist ;;
-              tar.zst) tar -c --zstd -f app-$GITHUB_SHA-${{ matrix.target }}.tar.zst dist ;;
+              zip) zip -r app-${{ matrix.target }}.zip dist ;;
+              tar.gz) tar -czf app-${{ matrix.target }}.tar.gz dist ;;
+              tar.xz) tar -cJf app-${{ matrix.target }}.tar.xz dist ;;
+              tar.zst) tar -c --zstd -f app-${{ matrix.target }}.tar.zst dist ;;
             esac
           done
       - name: Upload
