--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: api
         run: |
             sudo apt-get update
-            sudo apt-get install -y gcc-multilib x86_64-w64-mingw32-gcc mingw-w64 gcc-mingw-w64-x86-64
+            sudo apt-get install -y gcc-multilib mingw-w64 gcc-mingw-w64-x86-64
             rustup target add x86_64-pc-windows-gnu
             cargo build --release --target x86_64-pc-windows-gnu
       - name: Archive
