--- a/.github/workflows/buildRust.yml
+++ b/.github/workflows/buildRust.yml
@@ -37,6 +37,7 @@ jobs:
           cd dist
           zip -r app-x86_64-pc-windows-gnu.zip .
       - name: Upload
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-              name: app-x86_64-pc-windows-gnu
+           path: api/dist/app-x86_64-pc-windows-gnu.zip
+           name: app-x86_64-pc-windows-gnu
