--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "livisi-unofficial-app",
-    "slug": "livisi-unofficial-app",
+    "slug": "samtv1998livisi-unofficial-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -38,6 +38,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "8b958b57-8252-48db-aa51-fcfdc7ebf3c3"
+      }
+    },
+    "owner": "samtv1998"
   }
 }
