--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,7 +35,8 @@
     },
     "plugins": [
       "expo-router",
-      "expo-localization"
+      "expo-localization",
+      [ "expo-build-properties", { "android": { "usesCleartextTraffic": true } } ]
     ],
     "experiments": {
       "typedRoutes": true
